# megafon-numbers-parser

./: ChangeLog  README.md  setup.cfg  setup.py
.github/workflows/: python-app.yml
src/megafon_numbers_parser/: cli.py  numbers_request.py
tests/: test_parse.py
tests/data/: numbers.json
