[metadata]
name = megafon-numbers-parser
description = Megafon numbers parser
author = Ivan Vorobyev
author_email = ivorob@gmail.com
license = MIT
url = https://github.com/ivorob/megafon-numbers-parser
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

[options]
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    megafon-numbers-parser = megafon_numbers_parser.cli:run
